--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description"
-        content="Интерактивная страница, куда можно добавлять фотографии, удалять их и ставить лайки"/>
-  <meta name="keywords" content="фотографии, хранение, медиа"/>
-  <meta name="author" content="Олег Гордиенов"/>
-  <title>Mesto</title>
+    <meta charset="UTF-8"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <meta content="Интерактивная страница, куда можно добавлять фотографии, удалять их и ставить лайки"
+          name="description"/>
+    <meta content="фотографии, хранение, медиа" name="keywords"/>
+    <meta content="Олег Гордиенов" name="author"/>
+    <title>Mesto</title>
 </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+<body>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root"></div>
+</body>
 </html>
